cmake_minimum_required(VERSION 3.15)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(lc57 lc57.cpp)
add_executable(lc67 LC67.cpp)
add_executable(lc82 LC82.cpp)
add_executable(lc90 LC90.cpp)
add_executable(lc92 LC92.cpp)
add_executable(lc93 LC93.cpp)
add_executable(lc97 LC97.cpp)
add_executable(lc99 LC99.cpp)
add_executable(lc100 LC100.cpp)
add_executable(lc106 LC106.cpp)
add_executable(lc108 LC108.cpp)
add_executable(lc109 LC109.cpp)
add_executable(lc110 LC110.cpp)
add_executable(lc10 LC10.cpp)
add_executable(lc32 LC32.cpp)
add_executable(lc44 LC44.cpp)
add_executable(lc53 LC53.cpp)
add_executable(lc62 LC62.cpp)
add_executable(lc63 LC63.cpp)
add_executable(lc64 LC64.cpp)
add_executable(lc72 LC72.cpp)
add_executable(lc85 LC85.cpp)
add_executable(lc87 LC87.cpp)
add_executable(lc91 LC91.cpp)
add_executable(lc95 LC95.cpp)
add_executable(lc96 LC96.cpp)
add_executable(lc115 LC115.cpp)
add_executable(lc120 LC120.cpp)
add_executable(lc121 LC121.cpp)
add_executable(lc123 LC123.cpp)
add_executable(lc132 LC132.cpp)
add_executable(lc139 LC139.cpp)
add_executable(lc140 LC140.cpp)
add_executable(lc152 LC152.cpp)
add_executable(lc174 LC174.cpp)
add_executable(lc188 LC188.cpp)
add_executable(lc198 LC198.cpp)
add_executable(lc213 LC213.cpp)
add_executable(lc221 LC221.cpp)
add_executable(lc264 LC264.cpp)
add_executable(lc279 LC279.cpp)
add_executable(lc300 LC300.cpp)
add_executable(lc309 LC309.cpp)
add_executable(lc312 LC312.cpp)
add_executable(lc322 LC322.cpp)
add_executable(lc338 LC338.cpp)
add_executable(lc625 LC625.cpp)
add_executable(m57 M57.cpp)
